--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <script src="script.js"></script>
     <title>Hallo Nathan</title>
 </head>
-<body onload="startTime(), checkPartday(), dayMonth()">
+<body onload="startTime(), checkPartday(), dayMonth(), getMessage()">
     <div class="grid">
         <div class="time" id='txt'></div>
         <div class="day" id="day"></div>
         <div class="gr_vert" id="partday"></div>
         <div class="gr_horz">goede</div>
         <div class="sun"></div>
-        <div class="quote">Kijk in elke spiegel, zodat iedereen een kans heeft om je twee keer te zien.</div>
+        <div class="quote" id="quote">Kijk in elke spiegel, zodat iedereen een kans heeft om je twee keer te zien.</div>
         <div class="square1"></div>
         <div class="square2"></div>
         <div class="square3"></div>
